# feedback-app

./: CLAUDE.md  Cargo.toml
.chainlink/: issues.db
src/: db.rs  main.rs
templates/: admin_detail.html  admin_list.html  admin_new.html  base.html  feedback_form.html  feedback_list_partial.html  feedback_success.html  feedback_success_partial.html
